--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,8 @@ display: grid;
     color: black;
     border: none;
     border-radius: 20px;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     outline: none;
 
 }
@@ -169,8 +169,8 @@ ul li{
 }
 
 canvas{
-    height: 66%;
-    width: 33%;
+    /* height: 66%;
+    width: 33%; */
     background-color: #383b42;
     border: solid 1px black;
     border-radius: 20px;
@@ -179,8 +179,7 @@ canvas{
 /* IMAGE-EDITOR */
 
 .image-editor{
-    height: 66%;
-    width: 33%;
+    
     background-color: #383b42;
     color: black;
     grid-template-columns: repeat(5,1fr);
@@ -202,20 +201,28 @@ canvas{
     
 }
 
-.btn-switch{
+.btn-up{
+grid-row: 2;
+grid-column: 1/2;
+}
+
+.btn-down{
     grid-row: 2;
     grid-column: 2/3;
-    
+}
+.btn-switch{
+    grid-row: 2;
+    grid-column:3/4 ; 
 }
 
 .btn-add{
     grid-row: 2;
-    grid-column: 3/4;
+    grid-column: 4/5;
 }
 
 .btn-clear{
     grid-row: 2;
-    grid-column: 4/5;
+    grid-column: 5/6;
 }
 
 .inner-editor-div{
@@ -260,11 +267,11 @@ canvas{
 input[type="color"] {
 	-webkit-appearance: none;
 	border: none;
-	width: 1px;
-	height: 1px;
+	width: 30px;
+	height: 30px;
 }
 input[type="color"]::-webkit-color-swatch-wrapper {
-    padding: 100%;
+    padding: 0;
     
     
 }
@@ -336,4 +343,45 @@ input[type="color"]::-webkit-color-swatch {
     height: 192px;
     width: 256px;
     border-radius: 30%;
+}
+
+
+@media(max-width:800px){
+    .modal{
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 30px;
+    }
+    .navbar{
+        margin-inline-start: 0;
+    }
+}
+
+@media(max-width:490px){
+    canvas{
+width: 300px;
+height:300px;
+    }
+    .gallery{
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-rows: repeat(auto-fill,minmax(150px,1fr));
+    gap: 20px;
+    }
+    .img{
+        width: 170px;
+        height: 150px;
+    }
+    .modal{
+        margin-top: 50px;
+    }
+}
+
+@media(max-width:380px){
+    .img{
+        width: 250px;
+        height: 220px;
+    }
+    .gallery{
+        grid-template-columns:1fr;
+    }
 }
