--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,8 @@ canvas{
     gap: 20px;
     border-radius: 20px;
     padding: 30px;
+    width: 320px;
+    height: 320px;
 
 }
 
@@ -227,7 +229,7 @@ grid-column: 1/2;
 
 .inner-editor-div{
     
-    background-color: #19a59f;
+    background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
     border-radius: 15px;
     grid-row: 3/5;
     grid-column: 1/6;
@@ -302,13 +304,19 @@ input[type="color"]::-webkit-color-swatch {
     color: white;
     grid-row: 5;
     grid-column: 1/6;
+    background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
+    border-radius: 15px;
+}
+
+.share-container{
+    grid-row: 6;
+    grid-column: 1/3;
+    color: white;
 }
 
 .btn-share{
     color: white;
-    grid-row: 6;
-    grid-column: 1/3;
-    text-decoration: none;
+    text-decoration: none;   
 }
 
 .btn-download{
@@ -350,7 +358,8 @@ input[type="color"]::-webkit-color-swatch {
     .modal{
         flex-direction: column;
         justify-content: space-evenly;
-        margin-top: 30px;
+        margin-top: 80px;
+        margin-bottom: 80px;
     }
     .navbar{
         margin-inline-start: 0;
@@ -372,9 +381,11 @@ height:300px;
         height: 150px;
     }
     .modal{
-        margin-top: 50px;
+        margin-top: 60px;
+        margin-bottom: 70px;
     }
 }
+
 
 @media(max-width:380px){
     .img{
